# SGO_Connect

./: .gitignore
.github/workflows/: ci.yml
PySGOConnect/: pyproject.toml
PySGOConnect/src/pysgoconnect/: __init__.py  async_client.py  errors.py  pysgoconnect.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ru/niktoizniotkyda/netschooltokenapp/: Application.kt  GenTokenActivity.kt  LoginActivity.kt  MainActivity.kt
android/app/src/main/java/ru/niktoizniotkyda/netschooltokenapp/auth/: AppSettings.kt  BaseRetrofit.kt  BaseRetrofitSource.kt  BaseUrlInterceptor.kt  ChooseUserIdFragment.kt  ChooseUserIdViewModel.kt  Clazz.kt  EducationClass.kt  EducationInfo.kt  Exceptions.kt  FilterUiEntity.kt  GetTokenResponse.kt  GosuslugiAuthDialog.kt  GosuslugiAuthManager.kt  GosuslugiResult.kt  GosuslugiResultViewModel.kt  HeadersInterceptor.kt  IdentityLoginApi.kt  LoginRepository.kt  LoginRepositoryImpl.kt  LoginRetrofit.kt  LoginSource.kt  LoginWebView.kt  Organization.kt  OrganizationInfo.kt  RepositoryModule.kt  RetrofitConfig.kt  RetrofitLoginSource.kt  RetrofitQualifiers.kt  RetrofitUtilsSource.kt  School.kt  SchoolYear.kt  SettingsDataStore.kt  Subject.kt  Term.kt  Type.kt  UserIdAdapter.kt  UserInfo.kt  UserUIEntity.kt  UtilsApi.kt  (+4 more)
android/app/src/main/java/ru/niktoizniotkyda/netschooltokenapp/data/: AppConstants.kt  AppDataStore.kt  AppDataStoreImpl.kt  AppSettingsSerializer.kt  PrefsHelper.kt
android/app/src/main/java/ru/niktoizniotkyda/netschooltokenapp/ui/: DialogDecorator.kt  InstructionGenTokenDialog.kt  WarningDialog.kt
android/app/src/main/java/ru/niktoizniotkyda/netschooltokenapp/utils/: ActivityUtils.kt  ButtonAnimator.kt  Exceptions.kt
android/app/src/main/java/ru/niktoizniotkyda/sgo_connectapp/: Application.kt  GenTokenActivity.kt  LoginActivity.kt  MainActivity.kt  openURL.kt
android/app/src/main/java/ru/niktoizniotkyda/sgo_connectapp/api/: ApiExceptions.kt  DataModels.kt  ErrorModels.kt  NetworkModule.kt  SGOConnectApi.kt  SGOConnectRepository.kt  SGOConnectRepositoryImpl.kt  SGOConnectViewModel.kt
android/app/src/main/java/ru/niktoizniotkyda/sgo_connectapp/auth/: BaseRetrofit.kt  BaseRetrofitSource.kt  (+34 more)
android/app/src/main/proto/: AppSettings.proto
android/app/src/main/res/animator/: swing_rotation.xml
android/app/src/main/res/drawable/: animated_warning.xml  btn_ripple.xml  ic_check.xml  ic_copy.xml  ic_github_logo.xml  ic_info.xml  ic_token.xml  ic_warning.xml  rounded_16.xml
android/app/src/main/res/layout/: activity_gen_token.xml  activity_main.xml  container_login.xml  dialog_instruction_gen_token.xml  dialog_warning.xml  fragment_choose_user_id.xml  fragment_web_view_login.xml  gosuslugi_result.xml  item_user_id.xml
android/app/src/main/res/navigation/: login_navigation.xml  navigation.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  database.py  log.py
backend/src/models/: __init__.py  token.py
backend/src/routers/: __init__.py  tokens.py
backend/src/schemas/: token.py
backend/src/services/: main.py  tokens.py
backend/src/utils/: __init__.py  app_exceptions.py  encrypting.py  exception_handlers.py  middlewares.py  request_exceptions.py  service_result.py  utils.py
(+16 files in other folders)
