[project]
name = "pysgoconnect"
version = "0.0.1"
description = "Modern and fully asynchronous library for SGO Connect API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "PurrfectLab", email = "a.s7eve777@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.11.7",
]

[project.urls]
Documentation = "https://github.com/PurrfectLab/SGO_Connect/wiki"
Repository = "https://github.com/PurrfectLab/SGO_Connect/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"your_package" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
unsafe-fixes = false

select = ["ALL"]

ignore = [
    "ANN",
    "A001",
    "A002",
    "EM102",
    "TRY003",
    "PGH003",
    "PLR0913",
    "EM101",
    "BLE001",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107"
]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "tests"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["src"]

[tool.ruff.mccabe]
max-complexity = 5

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
avoid-escape = true

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.aliases]
"numpy" = "np"
"pandas" = "pd"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
